--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,15 +12,15 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$dot-hours-tracker-primary: mat.define-palette(mat.$indigo-palette);
-$dot-hours-tracker-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$dot-hours-tracker-primary: mat.define-palette(mat.$cyan-palette);
+$dot-hours-tracker-accent: mat.define-palette(mat.$orange-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $dot-hours-tracker-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$dot-hours-tracker-theme: mat.define-light-theme((
+$dot-hours-tracker-theme: mat.define-dark-theme((
   color: (
     primary: $dot-hours-tracker-primary,
     accent: $dot-hours-tracker-accent,
