--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-
+<!--
+  Title: app.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: default html
+-->
 
 <router-outlet></router-outlet>
