--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: about.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to display information about the application.
+-->
+
 <p>about works!</p>
