--- a/src/app/pages/admin/role-edit/role-edit.component.html
+++ b/src/app/pages/admin/role-edit/role-edit.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: role-edit.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for "admin" users to edit an active role
+-->
+
 <p>role-edit works!</p>
