--- a/src/app/pages/admin/roles/roles.component.html
+++ b/src/app/pages/admin/roles/roles.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: roles.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for "admin" users to create, view, and delete active roles
+-->
+
 <p>roles works!</p>
