--- a/src/app/pages/admin/security-question-edit/security-question-edit.component.html
+++ b/src/app/pages/admin/security-question-edit/security-question-edit.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: security-question-edit.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for "admin" users to edit active security questions
+-->
+
 <p>security-question-edit works!</p>
