--- a/src/app/pages/admin/user-edit/user-edit.component.html
+++ b/src/app/pages/admin/user-edit/user-edit.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: user-edit.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for "admin" users to edit/disable user accounts
+-->
+
 <p>user-edit works!</p>
