--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: users.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to for "admin" users to view active users.
+-->
+
 <p>users works!</p>
