--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: contact.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to display contact information.
+-->
+
 <p>contact works!</p>
