--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: home.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for the main part of the application.
+-->
+
 <p>home works!</p>
