--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: login.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for logging in.
+-->
+
 <p>login works!</p>
