--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: profile.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for user profiles.
+-->
+
 <p>profile works!</p>
