--- a/src/app/shared/account/forgot-password/forgot-password.component.html
+++ b/src/app/shared/account/forgot-password/forgot-password.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: forgot-password.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for users to verify hubId and begin the path for forgot password.
+-->
+
 <p>forgot-password works!</p>
