--- a/src/app/shared/account/register/register.component.html
+++ b/src/app/shared/account/register/register.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: register.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for account registration.
+-->
+
 <p>register works!</p>
