--- a/src/app/shared/account/reset-password/reset-password.component.html
+++ b/src/app/shared/account/reset-password/reset-password.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: reset-password.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html that allows users to reset their password during the final step of the forgot password path.
+-->
+
 <p>reset-password works!</p>
