--- a/src/app/shared/account/terms-of-service/terms-of-service.component.scss
+++ b/src/app/shared/account/terms-of-service/terms-of-service.component.scss
@@ -1,5 +1,5 @@
 /**
-Title: security-questions.component.scss
+Title: terms of service.component.scss
 Author: Walter McCue
 Date: 05/14/23
 Description: Styles for this component
