--- a/src/app/shared/account/verify-account/verify-account.component.html
+++ b/src/app/shared/account/verify-account/verify-account.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: verify-account.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to allow users to verify their security questions during the second step of the forgot password path.
+-->
+
 <p>verify-account works!</p>
