--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -1,4 +1,9 @@
-
+<!--
+  Title: auth-layout.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to set the header, navigational elements, and footer for all users who have NOT been authenticated.
+-->
 
 <div fxLayout="column" class="w-100">
 
