--- a/src/app/shared/auth-layout/auth-layout.component.scss
+++ b/src/app/shared/auth-layout/auth-layout.component.scss
@@ -1,4 +1,9 @@
-
+/**
+Title: auth-layout.component.scss
+Author: Walter McCue
+Date: 05/14/23
+Description: Styles for this component
+*/
 
 .header {
   min-height: 10vh;
