--- a/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: confirm-dialog.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html to warn users of irreversible actions
+-->
+
 <p>confirm-dialog works!</p>
