--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
-
+/**
+Title: styles.scss
+Author: Walter McCue
+Date: 05/14/23
+Description: Global styles for the application.
+*/
 
 :root {
   --dark-primary: #0097A7;
