--- a/src/app/pages/errors/not-found/not-found.component.html
+++ b/src/app/pages/errors/not-found/not-found.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: not-found.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for the 404 error page.
+-->
+
 <p>not-found works!</p>
