--- a/src/app/pages/errors/server-error/server-error.component.html
+++ b/src/app/pages/errors/server-error/server-error.component.html
@@ -1,1 +1,8 @@
+<!--
+  Title: server-error.component.html
+  Author: Walter McCue
+  Date: 05/14/23
+  Description: html for the 500 server error page.
+-->
+
 <p>server-error works!</p>
