--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,3 +1,10 @@
+/**
+Title: custom-theme.scss
+Author: Walter McCue
+Date: 05/14/23
+Description: Custom Theming for Angular Material
+*/
+
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
