--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,3 +4,38 @@ Author: Walter McCue
 Date: 05/14/23
 Description: Styles for this component
 */
+
+.login-form {
+  margin-top: 20vh;
+  align-items: center;
+}
+
+
+.account-controls {
+  display: flex;
+  margin-top: 1.5rem;
+  width: 50%;
+  align-self: center;
+  justify-content: space-between;
+}
+
+button {
+  font-weight: bold;
+  font-size: 1.125rem;
+  padding: .25rem;
+
+  width: 10rem;
+}
+
+@media (max-width: 800px) {
+
+  .login-form {
+    margin-top: 10vh;
+  }
+
+  .account-controls {
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+  }
+}
