--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -9,46 +9,73 @@
 
   <div fxFlex class="header dark-primary">
 
-    <div class="header-content">
+    <div class="header-nav">
       <nav>
 
         <div class="mobile-toggle">
           <button mat-icon-button [matMenuTriggerFor]="navMenu" aria-label="Navigation Menu" class="menu-btn">
             <mat-icon>menu</mat-icon>
             <mat-menu #navMenu fxFlex class="primary-color">
-              <button mat-raised-button color="accent" routerLink="/" mat-button>Home</button>
-              <button mat-raised-button color="accent" routerLink="/about" mat-button>About</button>
-              <button mat-raised-button color="accent" routerLink="/contact" mat-button>Contact</button>
+              <button mat-raised-button color="accent" routerLink="/" class="btn">Home</button>
+              <button mat-raised-button color="accent" routerLink="/about" class="btn">About</button>
+              <button mat-raised-button color="accent" routerLink="/contact" class="btn">Contact</button>
+              <button mat-raised-button color="accent" (click)="tos()" class="btn">Terms Of Service</button>
             </mat-menu>
           </button>
         </div>
 
         <div class="navbar-container">
-          <button mat-raised-button color="accent" routerLink="">Home</button>
-          <button mat-raised-button color="accent" routerLink="about">About</button>
-          <button mat-raised-button color="accent" routerLink="contact">Contact</button>
+          <button mat-raised-button color="accent" routerLink="" class="btn">Home</button>
+          <button mat-raised-button color="accent" routerLink="about" class="btn">About</button>
+          <button mat-raised-button color="accent" routerLink="contact" class="btn">Contact</button>
         </div>
 
       </nav>
     </div>
 
-    <div class="header-content">
+    <div class="header-title">
       <h1 class="title">DOT Hours Tracker</h1>
     </div>
 
-    <div class="header-content" align="end">
+    <div class="header-profile" align="end">
+
       <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="User Profile menu" class="menu-btn">
         <mat-icon>perm_identity</mat-icon>
       </button>
-      <mat-menu #profileMenu class="primary-color">
+
+      <mat-menu #profileMenu class="primary-color ">
         <p style="padding: 1rem; font-size: 1.125rem; color: #fff;">
-          Signed in as
+          Signed in as {{ hubId }}
         </p>
-        <button mat-raised-button color="accent">
+
+        <!-- Config Menu -->
+        <button mat-menu-item [matMenuTriggerFor]="configs" *ngIf="role == 'admin'">
+          <mat-icon>settings</mat-icon>
+          Configurations
+        </button>
+
+        <mat-menu #configs="matMenu" class="primary-color">
+          <button mat-menu-item routerLink="users">
+            <mat-icon>supervisor_account</mat-icon>
+            Users
+          </button>
+          <button mat-menu-item routerLink="security-questions">
+            <mat-icon>question_answer</mat-icon>
+            Security Questions
+          </button>
+          <button mat-menu-item routerLink="roles">
+            <mat-icon> vpn_key</mat-icon>
+            Roles
+          </button>
+        </mat-menu>
+
+        <button mat-raised-button color="accent" class="btn m-1" (click)="logout()">
           <mat-icon>logout</mat-icon>
           <span>Log out</span>
         </button>
+
       </mat-menu>
+
     </div>
 
   </div>
@@ -58,10 +85,18 @@
   </div>
 
   <div fxFlex class="footer dark-primary">
+
     <img src="../../../assets/optical-logo.png" class="logo" />
+
     <p>DOT Hours Tracker created by <br />
       <span style="font-weight:bold;">Optical Power and Performance</span> &copy; 2023
     </p>
+
+    <div class="header-profile" align="end">
+      <button mat-raised-button color="accent" class="navbar-container btn" (click)="tos()">
+        Terms Of Service
+      </button>
+    </div>
 
   </div>
 
