--- a/src/app/shared/base-layout/base-layout.component.scss
+++ b/src/app/shared/base-layout/base-layout.component.scss
@@ -11,10 +11,17 @@ Description: Styles for this component
   display: flex;
   flex-direction: row;
   align-items: center;
+  position: relative;
 }
 
-.header-content {
-  width: 33%;
+.header-title {
+  position: absolute;
+  left: 40rem;
+}
+
+.header-profile {
+  position: absolute;
+  right: 2rem;
 }
 
 nav {
@@ -25,7 +32,7 @@ nav {
   display: none;
 }
 
-button {
+.btn {
   font-weight: bold;
   font-size: 1.125rem;
   padding: .25rem;
@@ -47,6 +54,8 @@ button {
   padding-inline: 1rem;
   display: flex;
   align-items: center;
+  position: relative;
+  width: 100%;
 }
 
 .logo {
@@ -54,7 +63,11 @@ button {
   padding-inline: 1.5rem;
 }
 
-@media (max-width: 800px) {
+.m-1 {
+  margin-inline: 1rem;
+}
+
+@media (max-width: 1000px) {
 
   nav {
     margin-left: .5rem;
@@ -68,5 +81,8 @@ button {
     display: block;
     display: flex;
     flex-direction: column;
+  }
+  .header-title {
+    left: 9rem;
   }
 }
