--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,11 +5,11 @@
   Description: html for logging in.
 -->
 
-<div fxLayout="column" class="fill">
+<div fxLayout="column" class="w-100">
 
   <div fxFlex class="w-50">
 
-    <mat-card fxFlex class="login-form">
+    <mat-card fxFlex class="card-form">
 
       <mat-card-title class="title">
         <h2>Please log in to your account</h2>
