--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -41,8 +41,10 @@
 
   </div>
 
-  <div fxFlex class="main-content">
-    <router-outlet></router-outlet>
+  <div>
+    <div fxFlex class="main-content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
   <div fxFlex class="footer dark-primary">
