--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -92,8 +92,10 @@
   </div>
 
   <!-- Main Content -->
-  <div fxFlex class="main-content">
-    <router-outlet></router-outlet>
+  <div>
+    <div fxFlex class="main-content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
 
