--- a/src/app/shared/confirm-dialog/confirm-dialog.component.scss
+++ b/src/app/shared/confirm-dialog/confirm-dialog.component.scss
@@ -4,3 +4,11 @@ Author: Walter McCue
 Date: 05/14/23
 Description: Styles for this component
 */
+
+.dialog-warning {
+  color: #F44336;
+}
+
+.dialog-buttons {
+  justify-content: space-between;
+}
