--- a/src/app/pages/admin/roles/roles.component.html
+++ b/src/app/pages/admin/roles/roles.component.html
@@ -5,4 +5,72 @@
   Description: html for "admin" users to create, view, and delete active roles
 -->
 
-<p>roles works!</p>
+<div fxLayout="column" class="w-100">
+
+  <div fxFlex  class="w-50">
+
+    <mat-card class="card-form">
+
+      <!-- Title -->
+      <mat-card-title class="title">
+        <h2>Role Configurations</h2>
+      </mat-card-title>
+
+      <!-- Server Messages -->
+      <div class="messages">
+        <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
+      </div>
+
+      <mat-card-content class="w-100">
+
+        <!-- Create Role Form -->
+        <form [formGroup]="roleForm" (ngSubmit)="create(); roleForm.reset()">
+          <mat-form-field appearance="fill" class="w-60 field">
+            <mat-label>Role</mat-label>
+            <input type="text" matInput formControlName="text"
+            required placeholder="Enter a role..." />
+          </mat-form-field>
+
+          <mat-error *ngIf="roleForm.controls['text'].hasError('required')
+          && roleForm.controls['text'].touched">
+            Role is a required field.
+          </mat-error>
+
+          <button mat-raised-button type="submit"
+          [disabled]="!roleForm.valid" color="accent" class="btn">
+            Create Role
+          </button>
+
+        </form>
+      </mat-card-content>
+
+      <!-- Active Roles List -->
+      <mat-card-content class="w-100">
+        <p-table [value]="roles" responsiveLayout="scroll" class="api-table">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>
+                Active Roles
+              </th>
+              <th width='200px'></th>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-role>
+            <tr>
+              <td>{{ role.text }}</td>
+              <td class="api-buttons">
+                <button mat-button type="button" routerLink="/roles/{{ role._id }}">
+                  <mat-icon>create</mat-icon>
+                </button>
+                <button mat-button type="button" (click)="delete(role._id)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
