--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -5,4 +5,54 @@
   Description: html to for "admin" users to view active users.
 -->
 
-<p>users works!</p>
+<div fxLayout="column" class="w-100">
+
+  <div fxFlex  class="w-70">
+
+    <mat-card class="card-form">
+
+      <!-- Title -->
+      <mat-card-title class="title">
+        <h2>User Configurations</h2>
+      </mat-card-title>
+
+      <div class="messages">
+        <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
+      </div>
+
+      <!-- User Data -->
+      <p-table [value]="users" responsiveLayout="scroll" class="api-table">
+
+        <!-- Table Header -->
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Hub Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th style="width: 200px;"></th>
+          </tr>
+        </ng-template>
+
+        <!-- Table Body -->
+        <ng-template pTemplate="body" let-user>
+          <tr>
+            <td data-cell="hub id">{{ user.hubId }}</td>
+            <td data-cell="first name">{{ user.firstName }}</td>
+            <td data-cell="last name">{{ user.lastName }}</td>
+            <td data-cell="email">{{ user.email }}</td>
+            <td class="api-buttons">
+              <button mat-button type="button" routerLink="/users/{{ user._id }}">
+                <mat-icon>create</mat-icon>
+              </button>
+              <button mat-button type="button" (click)="delete(user._id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+
+      </p-table>
+    </mat-card>
+  </div>
+</div>
