--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,7 +140,7 @@ Description: Global styles for the application.
     margin-top: 10vh;
   }
 
-  .w-50, .w-60 {
+  .w-50, .w-60, .w-70 {
     width: 90%;
   }
 
