--- a/src/app/shared/account/register/register.component.scss
+++ b/src/app/shared/account/register/register.component.scss
@@ -4,3 +4,18 @@ Author: Walter McCue
 Date: 05/14/23
 Description: Styles for this component
 */
+
+.security {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+@media (max-width: 800px) {
+
+  .security {
+    flex-direction: column;
+    gap: 0;
+    margin-bottom: .75rem;
+  }
+}
