account recovery update

--- a/src/app/shared/account/forgot-password/forgot-password.component.scss
+++ b/src/app/shared/account/forgot-password/forgot-password.component.scss
@@ -4,3 +4,11 @@ Author: Walter McCue
 Date: 05/14/23
 Description: Styles for this component
 */
+
+button {
+  font-weight: bold;
+  font-size: 1.125rem;
+  padding: .25rem;
+  width: 10rem;
+  margin-inline: .25rem;
+}
