--- a/src/app/shared/account/reset-password/reset-password.component.html
+++ b/src/app/shared/account/reset-password/reset-password.component.html
@@ -5,4 +5,57 @@
   Description: html that allows users to reset their password during the final step of the forgot password path.
 -->
 
-<p>reset-password works!</p>
+<div fxLayout="column" class="w-100">
+
+  <div fxFlex class="w-50">
+
+    <mat-card class="card-form">
+
+      <!-- Title -->
+      <mat-card-title class="title">
+        <h2>Reset your Password</h2>
+      </mat-card-title>
+
+      <!-- Reset Password Form -->
+      <mat-card-content class="w-70">
+
+        <form [formGroup]="form" (ngSubmit)="updatePassword()" #resetPasswordForm>
+
+          <mat-form-field appearance="fill" class="w-100">
+
+            <mat-label>Reset Password</mat-label>
+            <input matInput type="password" formControlName="password"
+              placeholder="Password" required />
+
+            <mat-error *ngIf="form.controls['password'].hasError('required')
+            && form.controls['password'].touched">
+              Password is a required field.
+            </mat-error>
+
+            <mat-error *ngIf="form.controls['password'].hasError('pattern')
+            && form.controls['password'].touched">
+              Password must be at least 8 characters, contain one uppercase letter,
+              one lowercase letter, and one number.
+            </mat-error>
+
+          </mat-form-field>
+
+          <!-- Action Buttons -->
+          <mat-card-actions align="end">
+
+            <button mat-raised-button color="warn"
+            routerLink="/session/login" class="btn">
+              Cancel
+            </button>
+
+            <button mat-raised-button color="accent"
+            [disabled]="!form.valid" class="btn">
+              Submit
+            </button>
+
+          </mat-card-actions>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
