--- a/src/app/shared/account/forgot-password/forgot-password.component.html
+++ b/src/app/shared/account/forgot-password/forgot-password.component.html
@@ -5,4 +5,56 @@
   Description: html for users to verify hubId and begin the path for forgot password.
 -->
 
-<p>forgot-password works!</p>
+<div fxLayout="column" class="w-100">
+
+  <div fxFlex class="w-50">
+
+    <mat-card class="card-form">
+
+      <!-- Title -->
+      <mat-card-title class="title">
+        <h2>Verify your Hub ID</h2>
+      </mat-card-title>
+
+      <!-- Server Messages -->
+      <div class="messages">
+        <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
+      </div>
+
+      <!-- Forgot Password Form -->
+      <mat-card-content class="w-50">
+        <form [formGroup]="form" (ngSubmit)="verifyUser()" #hubIdForm>
+          <div fxLayout="column">
+
+            <mat-form-field fxFlex appearance="fill" class="w-100">
+              <mat-label>Hub ID</mat-label>
+              <input matInput required formControlName="hubId" />
+
+              <mat-error *ngIf="form.controls['hubId'].hasError('required')
+              && form.controls['hubId'].touched">
+                Hub ID is a required field.
+              </mat-error>
+
+            </mat-form-field>
+
+            <!-- Action Buttons -->
+            <mat-card-actions align="end">
+
+              <button mat-raised-button type="button"
+              routerLink="/session/login" color="warn">
+                Cancel
+              </button>
+
+              <button mat-raised-button
+              [disabled]="!form.valid" color="accent">
+                Confirm
+              </button>
+
+            </mat-card-actions>
+          </div>
+        </form>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
