--- a/src/app/shared/account/register/register.component.html
+++ b/src/app/shared/account/register/register.component.html
@@ -279,10 +279,20 @@
             </mat-error>
           </mat-form-field>
 
+          <div>
+            <p class="title">
+              By registering for an account, you are agreeing to the following
+              <br />
+              <button mat-raised-button type="button" color="accent" class="btn" (click)="tos()">
+                Terms
+              </button>
+            </p>
+          </div>
+
           <!-- Registration Buttons -->
           <div fxLayoutAlign="end">
 
-            <button mat-raised-button routerLink="/"
+            <button mat-raised-button routerLink="/session/login"
             type="button" class="btn" color="warn">
               Cancel
             </button>
