--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -5,4 +5,102 @@
   Description: html for user profiles.
 -->
 
-<p>profile works!</p>
+<div fxLayout="column" class="w-100">
+
+  <div fxFlex class="w-50">
+
+    <mat-card class="card-form">
+
+      <!-- Title -->
+      <mat-card-title class="title">
+        <h2>Edit your profile</h2>
+      </mat-card-title>
+
+      <!-- Server Messages -->
+      <div class="messages">
+        <p-messages [(value)]="serverMessages" [enableService]="false"></p-messages>
+      </div>
+
+      <!-- Forgot Password Form -->
+      <mat-card-content class="w-100">
+
+        <h3>Hub ID: {{ hubId }}</h3>
+
+        <form [formGroup]="profileForm" autocomplete="off" (ngSubmit)="saveUser()"
+        (keydown.enter)="$event.preventDefault()" class="w-100">
+
+          <!-- First Name -->
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>First Name</mat-label>
+            <input type="text" matInput formControlName="firstName" required />
+
+            <mat-error *ngIf="profileForm.controls['firstName'].hasError('required')
+            && profileForm.controls['firstName'].touched">
+              First name is a required field.
+            </mat-error>
+
+            <mat-error *ngIf="profileForm.controls['firstName'].hasError('minlength')
+            && profileForm.controls['firstName'].touched">
+              First Name must be at least 3 characters.
+            </mat-error>
+
+            <mat-error *ngIf="profileForm.controls['firstName'].hasError('maxlength')
+            && profileForm.controls['firstName'].touched">
+              First Name must be less than 35 characters.
+            </mat-error>
+          </mat-form-field>
+
+          <!-- Last Name -->
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Last Name</mat-label>
+            <input type="text" matInput formControlName="lastName" required />
+
+            <mat-error *ngIf="profileForm.controls['lastName'].hasError('required')
+            && profileForm.controls['lastName'].touched">
+              Last name is a required field.
+            </mat-error>
+
+            <mat-error *ngIf="profileForm.controls['lastName'].hasError('minlength')
+            && profileForm.controls['lastName'].touched">
+              Last Name must be at least 3 characters.
+            </mat-error>
+
+            <mat-error *ngIf="profileForm.controls['lastName'].hasError('maxlength')
+            && profileForm.controls['lastName'].touched">
+              Last Name must be less than 35 characters.
+            </mat-error>
+          </mat-form-field>
+
+          <!-- Email Address -->
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Email address</mat-label>
+            <input type="text" matInput formControlName="email" required />
+
+            <mat-error *ngIf="profileForm.controls['email'].hasError('required')
+            && profileForm.controls['email'].touched">
+              Email is a required field.
+            </mat-error>
+
+            <mat-error *ngIf="profileForm.controls['email'].hasError('email')
+            && profileForm.controls['email'].touched">
+              Invalid email format.
+            </mat-error>
+          </mat-form-field>
+
+          <!-- Action Buttons -->
+          <mat-card-actions align="end">
+            <button mat-raised-button routerLink="/"
+            type="button" color="warn" class="btn">
+              Cancel
+            </button>
+            <button mat-raised-button [disabled]="!profileForm.valid" color="accent" class="btn">
+              Submit
+            </button>
+          </mat-card-actions>
+
+        </form>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
