--- a/src/app/shared/account/terms-of-service/terms-of-service.component.html
+++ b/src/app/shared/account/terms-of-service/terms-of-service.component.html
@@ -60,5 +60,11 @@
         </li>
       </ol>
     </mat-card-content>
+    <mat-card-actions align="end">
+      <button mat-raised-button matDialogClose="confirm"
+      color="accent" class="btn">
+        Accept
+      </button>
+    </mat-card-actions>
   </mat-dialog-content>
 </mat-card>
