--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -19,12 +19,13 @@
               <button mat-raised-button color="accent" routerLink="/" mat-button>Home</button>
               <button mat-raised-button color="accent" routerLink="/about" mat-button>About</button>
               <button mat-raised-button color="accent" routerLink="/contact" mat-button>Contact</button>
+              <button mat-raised-button color="accent" (click)="tos()" class="btn">Terms Of Service</button>
             </mat-menu>
           </button>
         </div>
 
         <div class="navbar-container">
-          <button mat-raised-button color="accent" routerLink="/session/login">Login</button>
+          <button mat-raised-button color="accent" routerLink="/">Home</button>
           <button mat-raised-button color="accent" routerLink="/session/about">About</button>
           <button mat-raised-button color="accent" routerLink="/session/contact">Contact</button>
         </div>
