--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -59,15 +59,15 @@
         </button>
 
         <mat-menu #configs="matMenu" class="primary-color">
-          <button mat-menu-item routerLink="users">
+          <button mat-menu-item routerLink="admin/users">
             <mat-icon>supervisor_account</mat-icon>
             Users
           </button>
-          <button mat-menu-item routerLink="security-questions">
+          <button mat-menu-item routerLink="admin/security-questions">
             <mat-icon>question_answer</mat-icon>
             Security Questions
           </button>
-          <button mat-menu-item routerLink="roles">
+          <button mat-menu-item routerLink="admin/roles">
             <mat-icon> vpn_key</mat-icon>
             Roles
           </button>
