--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -9,10 +9,45 @@ Description: Styles for this component
   margin-bottom: 2rem;
 }
 
+.current-week {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  width: 100%;
+}
+
+.actual-hours, .scheduled-hours {
+  width: 50%;
+}
+
+.current-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.current-time {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
 .daily-section {
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  margin-bottom: 1.25rem;
+}
+
+.time-fields {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.clock-field {
+  width: 50%;
 }
 
 .daily-field {
@@ -26,14 +61,22 @@ Description: Styles for this component
   justify-content: space-between;
 }
 
-@media (max-width: 800px) {
+hr {
+  display: none;
+}
 
-  .daily-section {
+@media (max-width: 1000px) {
+
+  .current-week, .daily-section {
     flex-direction: column;
     margin-bottom: .5rem;
   }
 
-  .daily-field {
+  .daily-field, .time-fields, .actual-hours, .scheduled-hours {
     width: 90%;
+  }
+
+  hr {
+    display: block;
   }
 }
