--- a/src/app/pages/admin/roles/roles.component.html
+++ b/src/app/pages/admin/roles/roles.component.html
@@ -60,7 +60,7 @@
             <tr>
               <td>{{ role.text }}</td>
               <td class="api-buttons">
-                <button mat-button type="button" routerLink="/roles/{{ role._id }}">
+                <button mat-button type="button" routerLink="/admin/roles/{{ role._id }}">
                   <mat-icon>create</mat-icon>
                 </button>
                 <button mat-button type="button" (click)="delete(role._id)">
