--- a/src/app/pages/admin/users/users.component.html
+++ b/src/app/pages/admin/users/users.component.html
@@ -42,7 +42,7 @@
             <td data-cell="last name">{{ user.lastName }}</td>
             <td data-cell="email">{{ user.email }}</td>
             <td class="api-buttons">
-              <button mat-button type="button" routerLink="/users/{{ user._id }}">
+              <button mat-button type="button" routerLink="/admin/users/{{ user._id }}">
                 <mat-icon>create</mat-icon>
               </button>
               <button mat-button type="button" (click)="delete(user._id)">
