--- a/src/app/pages/errors/not-found/not-found.component.html
+++ b/src/app/pages/errors/not-found/not-found.component.html
@@ -5,4 +5,22 @@
   Description: html for the 404 error page.
 -->
 
-<p>not-found works!</p>
+<div fxLayout="column">
+
+  <div fxFlex class="title">
+    <h2>404 Error</h2>
+  </div>
+
+  <div fxFlex class="center">
+    <p>
+      The page you are looking for is as elusive as the sasquatch!
+    </p>
+  </div>
+
+  <div fxFlex>
+    <div class="img-container">
+      <img src="../../../../assets/sassquatch.jpg" alt="Sasquatch with arms raised facing a lake."/>
+    </div>
+  </div>
+
+</div>
