--- a/src/app/pages/errors/server-error/server-error.component.html
+++ b/src/app/pages/errors/server-error/server-error.component.html
@@ -5,4 +5,23 @@
   Description: html for the 500 server error page.
 -->
 
-<p>server-error works!</p>
+<div fxLayout="column">
+
+  <div fxFlex class="title">
+    <h2>500 Server Error</h2>
+  </div>
+
+  <div fxFlex class="center">
+    <p>
+      For some reason our servers have failed!
+      Maybe bugs love our code?
+    </p>
+  </div>
+
+  <div fxFlex>
+    <div class="img-container">
+      <img src="../../../../assets/code-bug.jpg" alt="A bug in the code."/>
+    </div>
+  </div>
+
+</div>
