--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,6 +18,9 @@ Description: Styles for this component
 
 .actual-hours, .scheduled-hours {
   width: 50%;
+  padding: .75rem;
+  background-color: #333333;
+  border-radius: .5rem;
 }
 
 .current-section {
@@ -54,6 +57,10 @@ Description: Styles for this component
   width: 20%;
 }
 
+.center {
+  text-align: center;
+}
+
 .hours-controls {
   display: flex;
   width: 100%;
@@ -70,6 +77,10 @@ hr {
   .current-week, .daily-section {
     flex-direction: column;
     margin-bottom: .5rem;
+    margin-inline: auto;
+  }
+  .current-week {
+    background-color: #333333
   }
 
   .daily-field, .time-fields, .actual-hours, .scheduled-hours {
