--- a/src/app/pages/admin/security-questions/security-questions.component.html
+++ b/src/app/pages/admin/security-questions/security-questions.component.html
@@ -61,7 +61,7 @@
               <tr>
                 <td>{{ sq.text }}</td>
                 <td class="api-buttons">
-                  <button mat-button type="button" routerLink="/security-questions/{{ sq._id }}">
+                  <button mat-button type="button" routerLink="/admin/security-questions/{{ sq._id }}">
                     <mat-icon>create</mat-icon>
                   </button>
                   <button mat-button type="button" (click)="delete(sq._id)">
