--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -459,14 +459,14 @@
             <!-- Actual -->
             <div class="actual-hours">
 
-              <div class="title">
+              <div class="center">
                 <h3>Actual Hours:</h3>
               </div>
 
               <!-- Sunday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Sunday Hours:</h4>
                 </div>
 
@@ -513,12 +513,18 @@
 
                   <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentSundayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentSundayDOT }}.</p>
+
+                    <mat-error *ngIf="currentSundayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
+
                   </div>
 
                 </div>
@@ -528,7 +534,7 @@
               <!-- Monday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Monday Hours:</h4>
                 </div>
 
@@ -575,12 +581,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentMondayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentMondayDOT }}.</p>
+
+                    <mat-error *ngIf="currentMondayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -590,7 +601,7 @@
               <!-- Tuesday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Tuesday Hours:</h4>
                 </div>
 
@@ -637,12 +648,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentTuesdayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentTuesdayDOT }}.</p>
+
+                    <mat-error *ngIf="currentTuesdayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -652,7 +668,7 @@
               <!-- Wednesday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Wednesday Hours:</h4>
                 </div>
 
@@ -699,12 +715,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentWednesdayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentWednesdayDOT }}.</p>
+
+                    <mat-error *ngIf="currentWednesdayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -714,7 +735,7 @@
               <!-- Thursday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Thursday Hours:</h4>
                 </div>
 
@@ -761,12 +782,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentThursdayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentThursdayDOT }}.</p>
+
+                    <mat-error *ngIf="currentThursdayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -776,7 +802,7 @@
               <!-- Friday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Friday Hours:</h4>
                 </div>
 
@@ -823,12 +849,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentFridayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentFridayDOT }}.</p>
+
+                    <mat-error *ngIf="currentFridayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -838,7 +869,7 @@
               <!-- Saturday Actual -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Actual Saturday hours:</h4>
                 </div>
 
@@ -885,12 +916,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Total Daily Hours:<br> {{ currentSaturdayActualHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Actual Eight Day Hours:<br> {{ currentSaturdayDOT }}.</p>
+
+                    <mat-error *ngIf="currentSaturdayDOT > 65">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: You're close to going over 70 hours in 8 days!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -903,14 +939,14 @@
             <!-- Scheduled -->
             <div class="scheduled-hours">
 
-              <div class="title">
+              <div class="center">
                 <h3>Scheduled Hours:</h3>
               </div>
 
               <!-- Sunday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Sunday Hours:</h4>
                 </div>
 
@@ -957,12 +993,18 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
-                    <p>Scheduled Daily Hours:<br> {{ currentSundayScheduledHours }}.</p>
+                  <div class="clock-field center">
+                    <p>Scheduled Daily Hours:<br>
+                       {{ currentSundayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentSundayProjection }}.</p>
+
+                    <mat-error *ngIf="currentSundayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -972,7 +1014,7 @@
               <!-- Monday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Monday Hours:</h4>
                 </div>
 
@@ -1019,12 +1061,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentMondayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentMondayProjection }}.</p>
+
+                    <mat-error *ngIf="currentMondayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1034,7 +1081,7 @@
               <!-- Tuesday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Tuesday Hours:</h4>
                 </div>
 
@@ -1081,12 +1128,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentTuesdayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentTuesdayProjection }}.</p>
+
+                    <mat-error *ngIf="currentTuesdayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1096,7 +1148,7 @@
               <!-- Wednesday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Wednesday Hours:</h4>
                 </div>
 
@@ -1143,12 +1195,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentWednesdayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentWednesdayProjection }}.</p>
+
+                    <mat-error *ngIf="currentWednesdayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1158,7 +1215,7 @@
               <!-- Thursday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Thursday Hours:</h4>
                 </div>
 
@@ -1205,12 +1262,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentThursdayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentThursdayProjection }}.</p>
+
+                    <mat-error *ngIf="currentThursdayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1220,7 +1282,7 @@
               <!-- Friday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Friday Hours:</h4>
                 </div>
 
@@ -1267,12 +1329,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentFridayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentFridayProjection }}.</p>
+
+                    <mat-error *ngIf="currentFridayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1282,7 +1349,7 @@
               <!-- Saturday Scheduled -->
               <div class="current-section">
 
-                <div class="title">
+                <div class="center">
                   <h4>Scheduled Saturday Hours:</h4>
                 </div>
 
@@ -1329,12 +1396,17 @@
 
                 <div class="current-time">
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Daily Hours:<br> {{ currentSaturdayScheduledHours }}.</p>
                   </div>
 
-                  <div class="clock-field title">
+                  <div class="clock-field center">
                     <p>Scheduled Eight Day Hours:<br> {{ currentSaturdayProjection }}.</p>
+
+                    <mat-error *ngIf="currentSaturdayProjection > 70">
+                      <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                      Warning: Working this shift will put you over 70 hours!
+                    </mat-error>
                   </div>
 
                 </div>
@@ -1422,6 +1494,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextSundayProjection }}.</p>
+
+              <mat-error *ngIf="nextSundayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1480,6 +1557,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextMondayProjection }}.</p>
+
+              <mat-error *ngIf="nextMondayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1538,6 +1620,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextTuesdayProjection }}.</p>
+
+              <mat-error *ngIf="nextTuesdayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1596,6 +1683,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextWednesdayProjection }}.</p>
+
+              <mat-error *ngIf="nextWednesdayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1654,6 +1746,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextThursdayProjection }}.</p>
+
+              <mat-error *ngIf="nextThursdayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1712,6 +1809,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextFridayProjection }}.</p>
+
+              <mat-error *ngIf="nextFridayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
@@ -1770,6 +1872,11 @@
 
             <div class="daily-field">
               <p>Eight Day Projection: {{ nextSaturdayProjection }}.</p>
+
+              <mat-error *ngIf="nextSaturdayProjection > 70">
+                <mat-icon style="vertical-align: bottom;">report_problem</mat-icon>
+                Warning: Working this shift will put you over 70 hours!
+              </mat-error>
             </div>
 
           </div>
